<resources>
    <string name="app_name">Pinata</string>
    <string name="permission_desc">사진을 사용 및 저장하기 위해서 다음의 접근 권한이 필요합니다.</string>
    <string name="permission_rej">[설정] > [권한]에서 권한을 허용할 수 있습니다.</string>
    <string name="error_permission">서비스 이용을 위해 권한을 허용해주세요.</string>
    <string name="error_load_image">사진을 불러올 수 없습니다</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_location">DCIM/</string>
    <string name="save_type">image/png</string>
    <string name="save_extension">.png</string>

    <string name="email_email">jong12ems@google.com</string>
    <string name="email_subject">앱 Pinata 관련 피드백</string>
    <string name="email_chooser">Choose an Email client :</string>
    <string name="package_name">capstone.aiimageeditor</string>

    <string name="copyright">카피라이트</string>
    <string name="regulation">개인정보보호규정</string>
    <string name="setting">설정</string>
    <string name="version">버전</string>
    <string name="review">후기</string>
    <string name="feedback">피드백</string>
    <string name="brush">브러쉬</string>
    <string name="eraser">지우개</string>
</resources>
