<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#22000000"
        android:onClick="OnBackgroundClick"
        tools:context=".ui.FragmentSetting">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box_white"
            android:elevation="3dp"
            android:orientation="vertical"
            android:padding="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="64dp"
                android:paddingTop="8dp"
                android:paddingRight="64dp"
                android:paddingBottom="8dp"
                android:text="@string/setting"
                android:textColor="#000000"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/version"
                    android:textColor="#333333" />

                <TextView
                    android:id="@+id/text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|left"
                    android:padding="8dp"
                    android:textColor="#333333"
                    android:textStyle="italic" />
            </LinearLayout>

            <TextView
                android:id="@+id/button_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="OnFeedbackClick"
                android:paddingLeft="64dp"
                android:paddingTop="8dp"
                android:paddingRight="64dp"
                android:paddingBottom="8dp"
                android:text="@string/feedback"
                android:textColor="#333333" />

            <TextView
                android:id="@+id/button_personalData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="OnRegulationClick"
                android:paddingLeft="64dp"
                android:paddingTop="8dp"
                android:paddingRight="64dp"
                android:paddingBottom="8dp"
                android:text="@string/regulation"
                android:textColor="#333333" />

            <TextView
                android:id="@+id/button_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="OnCopyrightClick"
                android:padding="8dp"
                android:paddingLeft="64dp"
                android:paddingTop="8dp"
                android:paddingRight="64dp"
                android:paddingBottom="8dp"
                android:text="@string/copyright"
                android:textColor="#333333" />

            <TextView
                android:id="@+id/button_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="OnReviewClick"
                android:padding="8dp"
                android:paddingLeft="64dp"
                android:paddingTop="8dp"
                android:paddingRight="64dp"
                android:paddingBottom="8dp"
                android:text="@string/review"
                android:textColor="#333333" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
